Layout fix for large Devices

--- a/index.html
+++ b/index.html
@@ -53,22 +53,35 @@
                 Start Here:
               </li>
               <li>
-                <a class="start-button button primary outline" data-device="iphone" title="Show iPhone 6">iPhone 6</a>
+                <a class="start-button button primary outline" data-device="iphone" title="Show iPhone 6">
+                  <span class="fa fa-circle hidden" aria-hidden="true"></span>&nbsp;
+                  iPhone 6
+                  </a>
               </li>
               <li>
-                <a class="start-button button primary outline" data-device="s7" title="Show Samsung Galaxy S7">Galaxy S7</a>
+                <a class="start-button button primary outline" data-device="s7" title="Show Samsung Galaxy S7">
+                  <span class="fa fa-circle hidden" aria-hidden="true"></span>&nbsp;
+                  Galaxy S7</a>
               </li>
               <li>
-                <a class="start-button button primary outline" data-device="ipad" title="Show iPad">iPad</a>
+                <a class="start-button button primary outline" data-device="ipad" title="Show iPad">
+                  <span class="fa fa-circle hidden" aria-hidden="true"></span>&nbsp;
+                  iPad</a>
               </li>
               <li>
-                <a class="start-button button primary outline" data-device="small-desktop" title="Show Small Desktop">Desktop</a>
+                <a class="start-button button primary outline" data-device="small-desktop" title="Show Small Desktop">
+                  <span class="fa fa-circle hidden" aria-hidden="true"></span>&nbsp;
+                  Desktop</a>
               </li>
               <li>
-                <a class="start-button button primary outline" data-device="hdtv" title="Show HDTV">HDTV</a>
+                <a class="start-button button primary outline" data-device="hdtv" title="Show HDTV">
+                  <span class="fa fa-circle hidden" aria-hidden="true"></span>&nbsp;
+                  HDTV</a>
               </li>
               <li>
-                <a class="start-button button primary outline" data-device="custom" title="Show Custom">Custom</a>
+                <a class="start-button button primary outline" data-device="custom" title="Show Custom">
+                  <span class="fa fa-circle hidden" aria-hidden="true"></span>&nbsp;
+                  Custom</a>
               </li>
             </ul>
           </div>
